cluster/apps/games/pterodactyl/svc.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: pterodactyl
  namespace: games
spec:
  selector:
    app: pterodactyl
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
